--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -693,11 +693,35 @@ span.mens-error {
   font: 10px Verdana, sans-serif;
 
 }
-label.label-edit{
+.label-edit{
 position: relative;
-padding-top: 50px;
-margin-top: 50px;
+padding-top: 60px;
+margin-top: 25px;
 margin-left: 75px;
 width: 350px;
 float: left;
+}
+
+.label-edit input{
+  border: 0;
+  border-bottom: 2px solid lightgrey;
+  outline: none;
+  min-width: 350px;
+  font-size: 16px;
+  transition: all .3s ease-out;
+  -webkit-transition: all .3s ease-out;
+  -moz-transition: all .3s ease-out;
+  -webkit-appearance:none;
+  border-radius: 0;
+
+}
+#lista-altera-cliente {
+  margin-top: 160px;
+  width: 970px;
+  height: 950px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: -3px -5px 6px #00000024;
+  border-radius: 15px;
+  opacity: 1;
+  float: right;
 }
