--- a/resources/views/frontend/clientes/show.edge
+++ b/resources/views/frontend/clientes/show.edge
@@ -14,7 +14,7 @@
             
         <div class="label-edit">
           <label for="">Tipo de Cliente:</label>
-          <input list="lista-tipopessoa" type="text" name="tipo" value={{ cliente.tipo }}  required/>
+          <input list="lista-tipopessoa" autocomplete="off" type="text" name="tipo" value={{ cliente.tipo }}  required/>
         </div>
         
         <datalist id="lista-tipopessoa">
