--- a/resources/views/frontend/clientes/edit.edge
+++ b/resources/views/frontend/clientes/edit.edge
@@ -15,7 +15,7 @@
 
         <div class="label-edit">
           <label for="">Tipo de Cliente:</label>
-          <input list="lista-tipopessoa" type="text" name="tipo" value={{ cliente.tipo }}  required/>
+          <input list="lista-tipopessoa" autocomplete="off" type="text" name="tipo" value={{ cliente.tipo }}  required/>
         </div>
         
         <datalist id="lista-tipopessoa">
@@ -81,7 +81,7 @@
 
         <div class="label-edit">
           <label for="">Estado: </label>
-          <input type="text" name="estado" value={{ cliente.estado }} class="form-control"required/>
+          <input type="text" autocomplete="off" name="estado" value={{ cliente.estado }} class="form-control"required/>
         </div>
 
         <div class="label-edit">
