--- a/resources/views/frontend/clientes/index.edge
+++ b/resources/views/frontend/clientes/index.edge
@@ -4,6 +4,10 @@
 
 <div id="lista">
   <h3>Cliente</h3>
+  
+    <span id="icone-pesquisa" class="material-icons">search</span>
+    <input id="pesquisar" type="text" placeholder="Pesquisar" />
+  
   <div>
     <div id="busca">
       @if(flashMessage('notification'))
