--- a/resources/views/layouts/navbar.edge
+++ b/resources/views/layouts/navbar.edge
@@ -1,6 +1,12 @@
 <div>
     <ul class="navbar">
-      <img id="logo" src="../logo.png">
-      <li><a id="navegacao" href="/logout"><span class="material-icons">logout</span></a></li>
+      
+      <img id="logo" src="{{ APP_URL }}{{ assetsUrl('logo.png') }}">
+      
+      <li>
+        <a id="navegacao" href="/logout">
+          <span class="material-icons">logout</span>
+        </a>
+      </li>
     </ul>
 </div>  
