--- a/resources/views/frontend/login/index.edge
+++ b/resources/views/frontend/login/index.edge
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css"> 
         <link rel="stylesheet" type="text/css" href="css/loginUtil.css">
         <link rel="stylesheet" type="text/css" href="css/stylesordem.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
 
     <body>
@@ -36,16 +37,14 @@
               <div class="wrap-input100 validate-input m-b-10" data-validate = "Informe o usuário">
                 <input class="input100" type="text" name="email" placeholder="Email">
                 <span class="focus-input100"></span>
-                <span class="symbol-input100">
-                  <i class="fa fa-user"></i>
+                <span id="symbol-input100" class="material-icons">person
                 </span>
               </div>
 
               <div class="wrap-input100 validate-input m-b-10" data-validate = "Informe a senha">
                 <input class="input100" type="password" name="password" placeholder="Senha">
                 <span class="focus-input100"></span>
-                <span class="symbol-input100">
-                  <i class="fa fa-lock"></i>
+                <span id="symbol-input100" class="material-icons">key
                 </span>
               </div>
 
