--- a/resources/views/frontend/clientes/edit.edge
+++ b/resources/views/frontend/clientes/edit.edge
@@ -2,6 +2,18 @@
 
 @section("content")
 
+<script>
+  $('#drop-list').on('change', function() {
+    var selectVal = $(this).val();
+      
+      $(this).attr({
+    'disabled': true,
+    'aria-disabled': true
+      });
+      $('#selectHidden').val(selectVal)
+    });
+</script>
+
 <div id="lista-altera-cliente">
   
     <h3>Altera Cliente</h3>
@@ -13,15 +25,14 @@
         <form action="/cliente/update/{{ cliente.id }}" method="POST">
         {{ csrfField() }}
 
-        <div class="label-edit">
-          <label for="">Tipo de Cliente:</label>
-          <input list="lista-tipopessoa" autocomplete="off" type="text" name="tipo" value={{ cliente.tipo }}  required/>
+        <div class="label-float">
+          <select id="drop-list">
+            <option value="PF">PF</option>
+            <option value="PJ">PJ</option>
+          </select>
+          <input type="hidden" value="" id="selectHidden">
+          <label>Selecione o tipo Pessoa</label>
         </div>
-        
-        <datalist id="lista-tipopessoa">
-          <option>PF</option>
-          <option>PJ</option>
-        </datalist>
   
 
         <div class="label-edit">
@@ -66,7 +77,7 @@
 
         <div class="label-edit">
           <label for="">Complemento: </label>
-          <input type="text" name="complemento" value={{ cliente.complemento }} class="form-control"required/>
+          <input type="text" name="complemento" value={{ cliente.complemento }} class="form-control"/>
         </div>
 
         <div class="label-edit">
@@ -79,18 +90,51 @@
           <input type="text" name="cidade" value={{ cliente.cidade }} class="form-control"required/>
         </div>
 
-        <div class="label-edit">
-          <label for="">Estado: </label>
-          <input type="text" autocomplete="off" name="estado" value={{ cliente.estado }} class="form-control"required/>
+        <div class="label-float">
+          <select id="drop-list">
+            <option value="AL">AL</option>
+            <option value="AC">AC</option>
+            <option value="AP">AP</option>
+            <option value="AM">AM</option>
+            <option value="BA">BA</option>
+            <option value="CE">CE</option>
+            <option value="DF">DF</option>
+            <option value="ES">ES</option>
+            <option value="GO">GO</option>
+            <option value="MA">MA</option>
+            <option value="MT">MT</option>
+            <option value="MS">MS</option>
+            <option value="MG">MG</option>
+            <option value="PA">PA</option>
+            <option value="PB">PB</option>
+            <option value="PR">PR</option>
+            <option value="PE">PE</option>
+            <option value="PI">PI</option>
+            <option value="PR">RR</option>
+            <option value="RO">RO</option>
+            <option value="RJ">RJ</option>
+            <option value="RN">RN</option>
+            <option value="RS">RS</option>
+            <option value="SC">SC</option>
+            <option value="SP">SP</option>
+            <option value="SE">SE</option>
+            <option value="TO">TO</option>
+          </select>
+          <input type="hidden" value="" id="selectHidden">
+          <label>Selecione o tipo Pessoa</label>
         </div>
 
         <div class="label-edit">
           <label for="">Observações: </label>
-          <input type="text" name="observacoes" value={{ cliente.observacoes }} class="form-control"required/>
+          <input type="text" name="observacoes" value={{ cliente.observacoes }} class="form-control"/>
         </div>
 
-        <div class="">
-          <button class="login100-form-btn" type="submit">
+        <div class="botoes">
+          <button class="botao-cancelar">
+            Cancelar
+          </button>
+  
+          <button class="botao-cadastrar">
             Salvar
           </button>
         </div>
