--- a/resources/views/frontend/clientes/index.edge
+++ b/resources/views/frontend/clientes/index.edge
@@ -5,11 +5,18 @@
 <div id="lista">
   <h3>Cliente</h3>
   <div>
+
+    <span id="icone-pesquisa" class="material-icons">search</span>
+    <input id="pesquisar" type="text" placeholder="Pesquisar" />
+
     <div id="busca">
+
       @if(flashMessage('notification'))
         <span>{{ flashMessage('notification') }}</span>
       @endif
+
     </div>
+    
     <table id="tabela">
       <thead>
         <thead>
@@ -17,8 +24,7 @@
               <th>Nome/Razão Social</th>
               <th>Telefone</th>
               <th>CPF/CNPJ</th>
-             
-            </tr>
+          </tr>
       </thead>
       </thead>
       <tbody>
